--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #2d7331;
   }
   a:hover {
     color: #747bff;
