--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -37,23 +37,48 @@
 
 .login-title {
   font-size: 24px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   color: #333;
+  align-self: center;
+}
+
+.login-text {
+  font-size: 14px;
+}
+
+.login-google {
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background-color: #000000;
+  margin: 15px 0; /* Ajusta este valor según sea necesario */
 }
 
 .login-footer {
   text-align: center;
   background-color: #f9f9f9;
   margin-top: auto;
-  padding: 10px 0;
+  padding: 0px 0;
+  position: relative;
+  bottom: 25px;
 }
 
 .access-problems {
   color: #666;
   font-size: 14px;
+  margin: 0px 0;
 }
+
 .access-problems2 {
-  color: #666;
+  color: #109205;
   font-size: 14px;
-  margin-top: 5px; /* Ajusta este valor según lo necesites */
+  margin: 0px 0;
+}
+
+.login-content p {
+  margin: 4px 0;
 }
